# ocbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
Docs/: ARCHITECTURE.md
enrichment/: Dockerfile  pyproject.toml
enrichment/enrichment/: config.py  embedder.py  logging.py  main.py  pipeline.py  repository.py  router.py
enrichment/enrichment/extraction/: __init__.py  agent.py  prompt.py  schemas.py
enrichment/enrichment/extraction/tools/: __init__.py
enrichment/tests/: conftest.py  test_schemas.py
enrichment/tests/unit/: test_repository.py
enrichment/tests/unit/test_extraction/: test_agent.py  test_prompt.py
frontend/: index.html  package.json
frontend/src/: App.vue
frontend/src/api/: search.ts  stats.ts
frontend/src/assets/: main.css
frontend/src/components/: AppHeader.vue  CategoryFilter.vue  CurrencyFilter.vue  DateRangeFilter.vue  EmptyState.vue  FilterPanel.vue  ItemCard.vue  MinScoreFilter.vue  PcbBackground.vue  PriceRangeFilter.vue  ResultsGrid.vue  SearchBar.vue  SmartModeToggle.vue  SortBar.vue  StandaloneFilter.vue
frontend/src/composables/: useFilters.ts  useSearch.ts
frontend/src/types/: search.ts
frontend/src/utils/: date.ts  format.ts
n8n/: cleanup-workflow.json  workflow.json
nginx/: nginx.conf
scraper/: Dockerfile  Dockerfile.test  pyproject.toml
scraper/scraper/: config.py  dependencies.py  exceptions.py  main.py  repository.py  service.py
scraper/scraper/ingestion/: cleaner.py  embedder.py  hasher.py
scraper/scraper/jobs/: cleanup_stale_topics.py
scraper/scraper/scraper/: client.py  parser.py
scraper/tests/: conftest.py
scraper/tests/fixtures/: forum_index.html  topic_page.html
scraper/tests/integration/: test_api.py
scraper/tests/unit/: test_repository.py
scraper/tests/unit/test_enrichment_extraction/: test_agent.py  test_repository.py  test_schemas.py
scraper/tests/unit/test_ingestion/: test_cleaner.py  test_embedder.py  test_hasher.py
scraper/tests/unit/test_scraper/: test_client.py  test_parser.py  test_service.py
search/: Dockerfile  pyproject.toml
search/search/: __init__.py  config.py  embedder.py  filters.py  logging.py  main.py  repository.py  router.py
search/search/jobs/: cleanup_labels.py  recompute_stats.py
search/search/pipeline/: __init__.py  agent.py  prompt.py  schemas.py  simple.py  smart.py
search/search/pipeline/tools/: __init__.py  wikipedia.py
search/tests/: test_filters.py  test_smart.py
search/tests/unit/: test_filters.py  test_precision_scoring.py
search/tests/unit/test_pipeline/: test_recall_scoring.py  test_smart.py
shared/: Dockerfile.migration  pyproject.toml
shared/shared/: __init__.py  config.py
shared/shared/db/: __init__.py  alembic.ini  connection.py
shared/shared/db/migrations/: env.py
shared/shared/db/migrations/versions/: 001_initial_schema.py  002_add_enrichment_tracking.py  003_add_item_fts_index.py  004_add_array_intersection_function.py  005_add_search_stats.py  006_add_deletion_tracking.py  007_add_topic_created_at.py
shared/shared/models/: __init__.py  item.py  topic.py
shared/shared/schemas/: __init__.py  item.py  topic.py
tools/scraper/: Dockerfile  analyze_structure.py  explore_forum.py  extract_samples.py  pyproject.toml
tools/scraper/scraped_html/: index.html  viewforum.php_f=26&start=40.html  viewforum.php_f=26.html  viewforum.phpf=26&start=40.html  viewforum.phpf=26.html  viewtopic.php_t=236111.html  viewtopic.php_t=293840.html  viewtopic.php_t=61229.html
