[project]
name = "search"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.3",
    "instructor>=1.4",
    "openai>=1.40",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain>=0.3",
    "httpx>=0.27",
    "sentence-transformers>=3.0",
    "torch>=2.0",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["search"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
shared = { path = "../shared", editable = true }

[tool.ruff]
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
indent-style = "space"

[tool.pytest.ini_options]
addopts = "--cov=search --cov-report=term-missing --cov-fail-under=90"
