[project]
name = "ocbot-shared"
version = "0.1.0"
description = "Shared models, schemas, and utilities for OCBot services"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "alembic>=1.13",
    "pgvector>=0.2.0",
]

[tool.uv]
package = true

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.ruff]
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
indent-style = "space"
