[project]
name = "scraper-tools"
version = "0.1.0"
description = "Scraping exploration tools for Overclockers.ua forum"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
